--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,5 +6,6 @@
   author={Anej Svete, Nadav Borenstein, Mike Zhou, Ryan Cotterell},
   journal={Empirical Methods in Natural Language Processing},
   year={2024},
+  url={https://arxiv.org/pdf/2410.03001},
   selected={true}
 }
