--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,8 @@
   author={Anej Svete, Nadav Borenstein, Mike Zhou, Ryan Cotterell},
   journal={Empirical Methods in Natural Language Processing},
   year={2024},
+  abbr={EMNLP}
+  html={https://arxiv.org/pdf/2410.03001},
   url={https://arxiv.org/pdf/2410.03001},
   selected={true}
 }
