--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,10 +3,9 @@
 
 @article{ngramandtransformers,
   title={Can Transformer Language Models Learn $n$-gram Language Models?},
-  author={Anej Svete, Nadav Borenstein, Mike Zhou, Ryan Cotterell},
+  author={Anej Svete, Nadav Borenstein, Mike Zhou, Isabelle Augenstein, and Ryan Cotterell},
   journal={Empirical Methods in Natural Language Processing},
   year={2024},
-  abbr={EMNLP}
   html={https://arxiv.org/pdf/2410.03001},
   url={https://arxiv.org/pdf/2410.03001},
   selected={true}
