--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,9 +4,8 @@
 @article{ngramandtransformers,
   title={Can Transformer Language Models Learn $n$-gram Language Models?},
   author={Anej Svete, Nadav Borenstein, Mike Zhou, Isabelle Augenstein, and Ryan Cotterell},
-  journal={Empirical Methods in Natural Language Processing},
+  journal={Preprint, Accpeted into Empirical Methods in Natural Language Processing},
   year={2024},
   html={https://arxiv.org/pdf/2410.03001},
-  url={https://arxiv.org/pdf/2410.03001},
   selected={true}
 }
