--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,23 @@
 ---
 ---
 
-@article{ngramandtransformers,
-  title={Can Transformer Language Models Learn $n$-gram Language Models?},
-  author={Anej Svete, Nadav Borenstein, Mike Zhou, Isabelle Augenstein, and Ryan Cotterell},
-  journal={Preprint, Accpeted into Empirical Methods in Natural Language Processing},
-  year={2024},
-  html={https://arxiv.org/pdf/2410.03001},
-  selected={true}
+@inproceedings{ngramandtransformers,
+    bibtex_show={true},
+    title = "Can Transformers Learn $n$-gram Language Models?",
+    author = "Svete, Anej  and
+      Borenstein, Nadav  and
+      Zhou, Mike  and
+      Augenstein, Isabelle  and
+      Cotterell, Ryan",
+    editor = "Al-Onaizan, Yaser  and
+      Bansal, Mohit  and
+      Chen, Yun-Nung",
+    booktitle = "Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2024",
+    address = "Miami, Florida, USA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.emnlp-main.550",
+    pages = "9851--9867",
+    abstract = "Much theoretical work has described the ability of transformers to represent formal languages. However, linking theoretical results to empirical performance is not straightforward due to the complex interplay between the architecture, the learning algorithm, and training data. To test whether theoretical lower bounds imply \textit{learnability} of formal languages, we turn to recent work relating transformers to $n$-gram language models (LMs). We study transformers{'} ability to learn random $n$-gram LMs of two kinds: ones with arbitrary next-symbol probabilities and ones where those are defined with shared parameters. We find that classic estimation techniques for $n$-gram LMs such as add-$\lambda$ smoothing outperform transformers on the former, while transformers perform better on the latter, outperforming methods specifically designed to learn $n$-gram LMs.",
 }
