--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@inproceedings{ngramandtransformers,
+@article{ngramandtransformers,
     bibtex_show={true},
     title = {Can Transformers Learn $n$-gram Language Models?},
     author = {Svete, Anej  and
@@ -19,4 +19,6 @@
     publisher = {Association for Computational Linguistics},
     url = {https://aclanthology.org/2024.emnlp-main.550},
     pages = {9851--9867},
+    selected={true}
 }
+
