--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
     year = {2024},
     address = {Miami, Florida, USA},
     publisher = {Association for Computational Linguistics},
-    url = {https://aclanthology.org/2024.emnlp-main.550},
+    html = {https://aclanthology.org/2024.emnlp-main.550},
     pages = {9851--9867},
     selected={true}
 }
