--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,22 +2,11 @@
 ---
 
 @article{ngramandtransformers,
-    title = {Can Transformers Learn $n$-gram Language Models?},
-    author = {Svete, Anej  and
-      Borenstein, Nadav  and
-      Zhou, Mike  and
-      Augenstein, Isabelle  and
-      Cotterell, Ryan},
-    editor = {Al-Onaizan, Yaser  and
-      Bansal, Mohit  and
-      Chen, Yun-Nung},
-    booktitle = {Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
-    month = {nov},
-    year = {2024},
-    address = {Miami, Florida, USA},
-    publisher = {Association for Computational Linguistics},
-    html = {https://aclanthology.org/2024.emnlp-main.550},
-    pages = {9851--9867},
-    selected={true}
+  title={Can Transformer Language Models Learn $n$-gram Language Models?},
+  author={Anej Svete, Nadav Borenstein, Mike Zhou, Isabelle Augenstein, and Ryan Cotterell},
+  journal={Empirical Methods in Natural Language Processing},
+  year={2024},
+  html={https://aclanthology.org/2024.emnlp-main.550.pdf},
+  selected={true}
 }
 
