--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,13 @@
 ---
 ---
 
-@article{ngramandtransformers,
+@inproceedings{ngramandtransformers,
   title={Can Transformer Language Models Learn $n$-gram Language Models?},
   author={Anej Svete, Nadav Borenstein, Mike Zhou, Isabelle Augenstein, and Ryan Cotterell},
   journal={Empirical Methods in Natural Language Processing},
-  year={2024},
   html={https://aclanthology.org/2024.emnlp-main.550.pdf},
+  year={2024},
+  publisher ={Association for Computational Linguistics},
+  pages = {"9851--9867"},
   selected={true}
 }
-
