--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@inproceedings{ngramandtransformers,
+@article{ngramandtransformers,
   title={Can Transformer Language Models Learn $n$-gram Language Models?},
   author={Anej Svete, Nadav Borenstein, Mike Zhou, Isabelle Augenstein, and Ryan Cotterell},
   journal={Empirical Methods in Natural Language Processing},
