--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
     title = {Can Transformers Learn $n$-gram Language Models?},
     author = {Svete, Anej  and
       Borenstein, Nadav  and
-      \textbf{Zhou, Mike}  and
+      Zhou, Mike  and
       Augenstein, Isabelle  and
       Cotterell, Ryan"},
     editor = {Al-Onaizan, Yaser  and
