--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+
+@inproceedings{zhou-etal-2026-pot,
+    author = {Mike Zhou and Fenil Bardoliya and Vivek Gupta and Dan Roth},
+    title = {{Program-of-Thought Reveals LLM Abstraction Ceilings}},
+    booktitle = {Findings of the 2026 Conference of the European Chapter of the Association for Computational Linguistics},
+    year = {2026},
+    url = "https://cogcomp.seas.upenn.edu/papers/ZBGR26.pdf",
+    funding = {ONR-LtRD, ARO-MURI, NSF-P},
+}
+
 @inproceedings{svete-etal-2024-transformers,
     title = {Can Transformers Learn $n$-gram Language Models?},
     author = {Svete, Anej and
