--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
     year = {2026},
     url = "https://cogcomp.seas.upenn.edu/papers/ZBGR26.pdf",
     funding = {ONR-LtRD, ARO-MURI, NSF-P},
+    selected = {true}
 }
 
 @inproceedings{svete-etal-2024-transformers,
