--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
     title = {{Program-of-Thought Reveals LLM Abstraction Ceilings}},
     booktitle = {Findings of the 2026 Conference of the European Chapter of the Association for Computational Linguistics},
     year = {2026},
-    url = "https://cogcomp.seas.upenn.edu/papers/ZBGR26.pdf",
+    url = {https://cogcomp.seas.upenn.edu/papers/ZBGR26.pdf},
     funding = {ONR-LtRD, ARO-MURI, NSF-P},
     selected = {true}
 }
